Added Final qustion macrochitze
Unfinished what happens after an answer is given;
Unfinished validation of load string

--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -189,7 +189,7 @@
                                         </div>
                                         <br/><br/>
                                         <div class="common" align="center">                
-                                            <a id="solutionField" href="javascript:showSolutionField();"><img src="Images/C2.Macrochitze/map.png" width="70" height="70" border="0" Hspace="0" Vspace="0"/></a>
+                                            <a id="solutionField" href="javascript:showSolutionField(isMazeSolved);"><img src="Images/C2.Macrochitze/map.png" width="70" height="70" border="0" Hspace="0" Vspace="0"/></a>
                                         </div>
                                         <br/>
                                         <div class="common" align="center">                
