Adding maze name
... and flag picture;
moving maze instructions into a tinybox

--- a/Macrochitze.html
+++ b/Macrochitze.html
@@ -101,12 +101,14 @@
 <!-- Cell (3) -->		<td rowspan="1" colspan="3" width="900">
                             <table id="outertableMainContents" border="0">
                                 <tr>
-                                    <td id="tdMainContentsLeft" rowspan="1" colspan="1" valign="top" width="220" class="common">
+                                    <td id="tdMainContentsLeft" rowspan="1" colspan="1" valign="top" width="220" class="common" style="padding-top:25px;">
+                                        <div id="MazeTitle"  class="style_orange" align="center" style="font-weight:bold"></div>
+										<br/><br/>
+										<div id="MazeNeutralImageField" class="common" align="center"></div>
+                                        <br/><br/>
                                         <div class="common" align="center">                
                                             <a id="MazeRules" href="javascript:toggleMazeRules();"><img src="Images/C2.Macrochitze/rules.png" width="128" height="128" border="0" Hspace="0" Vspace="0"/></a>
                                         </div>
-                                        <br/>
-                                        <div id="MacroStageInstructions" align="center"> Instructions </div>
                                     </td>
                                     <td id="tdMainContentsCenter" rowspan="1" colspan="1" width="580">
                                         <table id="innertableMainContents" border="0" style="text-align:center; cursor:default; border-collapse: collapse;">
